# Mlops

./: .flake8  .gitignore  Dockerfile  mlflow.db  pyproject.toml  readme.md  requirements.txt  run_pipeline.py
.github/workflows/: ci.yaml
configs/: config.yaml
scripts/: benchmark_dataloader.py  infer.py  preprocess.py  train.py
src/: inference.py  main.py  serve.py
src/datasets/: multimodal_dataset.py  preprocessed_dataset.py
src/models/: multimodal_model.py
src/preprocessing/: preprocess.py
src/training/: trainer.py
src/utils/: ddp.py  logger.py  seed.py
tests/: test_dataset.py  test_model.py
