[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-mlops"
version = "0.1.0"
description = "Production-grade MLOps system for multimodal biometric recognition"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch",
    "torchvision",
    "mlflow",
    "pyyaml",
    "pillow",
    "tqdm",
    "hydra-core"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
